# Language_identification

./: .env.example  .env.sample  .gitignore  README.md  advanced_segments.json  advanced_transcribe_with_language.py  advanced_transcript.json  advanced_transcription_test.txt  cloud_test_output.txt  cloud_transcribe.py  container_connection_test.txt  convert_audio.py  convert_audio_optimized.py  debug_lid.py  debug_output.txt  disconnected_language_detector.py  disconnected_language_detector2.py  disconnected_language_detector3.py  example_usage.md  fixed_module_segments.json  fixed_module_test.txt  fixed_module_transcript.json  fixed_transcribe_with_language.py  fixed_websocket_connection.py  hybrid_transcribe.py  hybrid_transcript.json  lid_direct_test.py  lid_direct_test.txt  lid_improved_test.txt  pyproject.toml  requirements.txt  simple_cloud_test.py  simple_lid_sync_test.py  simple_lid_sync_test.txt  simple_lid_test.py  simple_lid_test.txt  simple_lid_test_atstart.py  simple_test_output.txt  test-env.ps1  test_basic_speech.py  (+26 more)
app/: cli.py  language_detect.py  language_detect_improved.py  segmentation.py  transcribe.py  transcribe_with_language.py
audio/: README.md
scripts/: run-containers-amantara-surf5.ps1  run-containers-simple.ps1  run-containers.ps1  stop-containers.ps1
